# strategix-planner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  architecture.md  changelog.md  examples.md  index.md  license.md  requirements.txt
docs/api/: core.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: advanced_usage.py  basic_usage.py
src/smart_planner/: __init__.py  core.py  exceptions.py
src/strategix/: __init__.py  core.py  types.py  utils.py
tests/: test_integration.py  test_smart_planner.py
